<resources>
    <string name="app_name">小末</string>
    <string name="hello_world">Hello world!</string>
    <string name="app_need_work_with_net">您的手机当前没有可用网络，小末需要在联网状态下工作哦！</string>
    <string name="add_device">添加</string>
    <string name="menu_modify_psw">修改密码</string>
    <string name="menu_switch_user">切换用户</string>
    <string name="menu_exit">退出</string>
    <string name="menu_device_manager">设备管理</string>
    <string name="menu_safe_center">安全中心</string>
    <string name="menu_set">设置</string>
    <string name="menu_more">更多</string>
    <string name="menu_quality">高清模式</string>
    <string name="menu_fluency">标准模式</string>
    <string name="menu_adapter">自适应</string>
    <string name="exit_warn">再按一次退出</string>
    <string name="get_device_list_failured">获取摄像头列表失败</string>
    <string name="stop_play_err">停止当前播放的摄像头失败</string>
    <string name="stop_play_over">停止播放成功</string>
    <string name="dev_delete">删除</string>
    <string name="dev_rename">重命名</string>
    <string name="play_disconnect">正在重连</string>
    <string name="fast_experience">演示摄像头</string>
    <string name="phone_number">手机号码</string>
    <string name="password">密码（6-18位）</string>
    <string name="forget_psw">忘记密码</string>
    <string name="register">注册</string>
    <string name="login">登录</string>
    <string name="powerd_by">Powered by</string>
    <string name="login_successfully">登录成功</string>
    <string name="logout_successfully">登出成功</string>
    <string name="user_psw_error">用户密码错误</string>
    <string name="account">账号</string>
    <string name="login_repeat">重复登录</string>
     <string name="others_login">该账户已经在其他设备上登录</string>
    <string name="login_failuer">登录失败，请重试</string>
    <string name="play_back_disconnect">由于网络原因，回放已停止！</string>
	<string name="device_not_online">摄像头不在线！</string>
    <string name="select_country">选择国家</string>
    <string name="input_your_area">请输入您的所在区域：</string>
    <string name="next_step">下一步</string>
    <string name="setup_account_psw">请设置账号和密码</string>
     <string name="setup_psw">请设置密码</string>
    <string name="input_psw">请输入密码（6-18位）</string>
    <string name="input_your_phone_as_account">输入手机号</string>
     <string name="input_your_account">输入您的账号</string>
    <string name="input_your_email_as_account">输入邮箱作为账号</string>
    <string name="input_psw_again">请重复输入密码</string>
    <string name="psw_inconsistent">重复输入密码不一致</string>
    <string name="account_have_existed">用户名已经存在</string>
    <string name="account_have_not_existed">用户不存在</string>
    <string name="i_agree">我同意</string>
    <string name="software_use_agreement">软件使用协议</string>
    <string name="account_format_error">账号格式错误</string>
    <string name="phone_format_error">手机号码格式错误</string>
    <string name="email_format_error">邮箱格式错误</string>
    <string name="psw_format_error">密码由(6-18)位字符或者数字组成</string>
    <string name="register_success">注册成功</string>
      <string name="register_fail">注册失败</string>
    <string name="please_agree_account_format_error">请同意软件使用协议</string>
    <string name="connect_server_success">已连接服务器</string>
    <string name="connect_server_fai">连接服务器失败</string>
    <string name="mgr_reconnect">服务器未连接，正在尝试重连！</string>
    <string name="get_dev_ip_success">正在尝试连接摄像头</string>
    <string name="get_dev_ip_fai">连接摄像头失败</string>
    <string name="realplay_success">实时播放成功</string>
    <string name="realplay_fai">实时播放失败</string>
    <string name="play_back_success">回放中！</string>
    <string name="play_back_fai">回放失败</string>
     <string name="find_psw">找回密码</string>
    <string name="reset_psw">重置密码</string>
    <string name="input_your_account_new_psw">请输入您的账号和新密码：</string>
    <string name="input_your_account_old_and_new_psw">请输入您的账号和新旧密码：</string>
    <string name="input_account">输入账号</string>
    <string name="input_old_psw">输入旧密码</string>
    <string name="input_new_psw">输入新密码</string>
    <string name="input_new_psw_again">重复输入新密码</string>
    <string name="modify">修改</string>
	<string name="modify_psw_success">修改密码成功</string>
    <string name="input_verification_code">填写验证码</string>
    <string name="we_have_send_email">我们已经向您填写的邮箱发送了一封验证邮件以激活你的账号，请输入收到的验证码。</string>
    <string name="we_have_send_sms">我们已经向您填写的手机发送了一条验证短信以激活你的账号，请输入收到的验证码。</string>
    <string name="recover">获取验证码</string>
    <string name="can_recover_after_seconds">秒后可重新获得</string>
    <string name="confirm">确认</string>
    <string name="reset_psw_successful">密码重置成功</string>
      <string name="reset_psw_fail">密码重置失败</string>
    <string name="please_input_six_digits_verification_code">请输入6位验证码</string>
    <string name="verification_code_error">验证码错误</string>
     <string name="verification_code_fail">检测验证码失败</string>
    <string name="user_not_exist">用户不存在</string>
    <string name="reset_psw_success">密码重置成功</string>
    <string name="add_device_wifi_psw_hint">请输入无线密码</string>
    <string name="add_device_previous">上一步</string>
    <string name="add_device_advance">高级</string>
    <string name="add_device_next">下一步</string>
    <string name="add_device_sure">确认</string>
    <string name="add_device_dhcp">DHCP</string>
    <string name="add_device_dhcp_ip">输入给摄像头分配的IP</string>
    <string name="add_device_dhcp_mac">输入子网掩码</string>
    <string name="add_device_dhcp_gateway">输入网关</string>
    <string name="add_device_title_set_wifi">配置网络</string>
    <string name="add_device_op_ssid">摄像头需要连接到无线网络(目前暂时不支持5G WLAN,企业级路由器)</string>
    <string name="add_device_op_ssidpsw">无线密码</string>
    <string name="add_device_op_dhcpip">ip地址</string>
    <string name="add_device_op_dhcpmac">子网掩码</string>
    <string name="add_device_op_dhcpgateway">网关</string>
    <string name="add_device_op_ipset">ip设置</string>
    <string name="add_device_open_advance_option">打开高级选项</string>
    <string-array name="add_device_op_ipset_arr">
        <item>DHCP</item>
        <item>静态</item>
    </string-array>
    <string name="add_device_search_activity">搜索摄像头</string>
    <string name="add_device_seach_begin_search">开始搜索</string>
    <string name="add_device_search_ssid_list">摄像头列表</string>
    <string name="cancel">取消</string>
    <string name="add_device_search_tip_text">正在扫描，剩余时间</string>
    <string name="add_device_search_dialog_title">摄像头列表</string>
    <string name="add_device_research">重新搜索</string>
    <string name="add_device_name_device_dialog_title">为您的摄像头取个名字</string>
    <string name="add_device_ensure_tip">请确认摄像头指示灯处于红灯闪烁状态，如果你听到了“等待接收无线网络名称和密码”的提示，请执行下一步&quot;</string>
    <string name="add_device_ensure_can_not_get_tip">红灯没有闪烁怎么办</string>
     <string name="add_device_ensure_tip1">请确认摄像头指示灯处于红灯闪烁状态，点击按钮进入下一步</string>
    <string name="add_device_ensure_tip2">如果听到“等待接收无线网络名称和密码”的提示，请执行下一步&quot;</string>
    <string name="add_device_ensure_next">红灯已闪烁</string>
    <string name="add_device_ensure_without_tip_title">重置摄像头</string>
    <string name="add_device_ensure_reset_tip">找到摄像头上的Reset圆孔，并用针插入该孔，实现重置功能</string>
    <string name="add_device_ensure_title">摄像头添加</string>
    <string name="add_device_wifi_unable">wifi开关已被关闭，请开启</string>
    <string name="add_device_wifi_not_connect">当前没有可用的wifi网络，请连接wifi后重试</string>
    <string name="add_device_config_tip">正在配置摄像头,请稍候...</string>
    <string name="add_device_config_cancel">取消本次配置</string>
    <string name="add_device_config_back">正在配置摄像头，请在听到摄像头提示错误后进行此次操作，是否继续？</string>
    <string name="add_device_config_psw_operate_tip1">如果听到摄像头的“叮咚”声，说明摄像头已经收到指定的无线网络信息，开始尝试连接到互联网；</string>
    <string name="add_device_config_psw_operate_tip2">如果摄像头提示“无线密码错误”，请返回到上一步，检查密码后，重新尝试；</string>
    <string name="add_device_config_psw_operate_tip3">如果听到摄像头提示“已接入互联网”，请耐心等待片刻，并给您的摄像头命名，软件会自动跳转到视频浏览。</string>
    <string name="add_device_config_title">配置摄像头</string>
    <string name="add_device_wifi_changed">您当前的wifi网络已经改变，请重新填写配置信息</string>
    <string name="add_device_wifi_changed_config_err">您当前的wifi网络已经改变，导致配置失败，请连接wifi网络后重新配置</string>
    <string name="add_device_config_failured">配置摄像头失败</string>
    <string name="add_device_wifi_info_exception">wifi信息出现错误，请重新配置</string>
    <string name="add_device_config_err_connect_err">摄像头绿灯还未闪烁</string>
    <string name="add_device_config_err_connect_suc">摄像头播报已经连上互联网</string>
    <string name="add_device_config_device_counter">已完成添加：</string>
    <string name="add_device_complete">完成</string>
    <string name="add_device_bound_by_other">设备：%1$s 其他用户所添加！继续添加请点“继续”，否则点击“退出”</string>
    <string name="add_device_continue">继续</string>
    <string name="add_device_quit">退出</string>
    <string name="add_device_name_not_null">名字不能为空！</string>
    <string name="communication_failed">网络连接失败</string>
    <string name="communication_timeout">网络连接超时</string>
    <string name="mgr_not_connect">没有连上服务器</string>
    <string name="dev_not_connect">没有连上摄像头</string>
    <string name="device_manage">设备管理</string>
     <string name="device_setting">设备设置</string>
    <string name="delete">删除</string>
    <string name="led_dimming">led调光</string>
    <string name="alarmswitch">告警开关</string>
    <string name="firmware_update">固件升级</string>
     <string name="update">升级</string>
    <string name="alarmswitch_colon">告警开关：</string>
    <string name="firmware_update_colon">固件升级：</string>
    <string name="firmware_can_upgrade">固件可升级</string>
    <string name="temporarily_not_have_upgrade">固件暂无更新</string>
    <string name="is_upgrading">固件正在升级</string>
    <string name="upgrading_pos">正在升级：%1$d %%</string>
    <string name="upgrade_success">摄像头:%1$s 已经升级成功，摄像头重启完成后就可以查看了！</string>
    <string name="upgrade_failure">摄像头:%1$s 由于网络原因，升级失败！请重试</string>
    <string name="get_apply_test_account_failure">由于网络原因，获取演示摄像头失败！请重试</string>
    <string name="unavailable">不可用</string>
    <string name="available">可用</string>
    <string name="switch_on">已开启</string>
    <string name="switch_off">已关闭</string>
    <string name="alarmswitch_colon_switch_off">告警开关已关闭</string>
    <string name="hint">提示</string>
    <string name="present_camera_will_be_unbind">当前摄像头将会被解除绑定吗，摄像头复位之后可以再次添加，是否继续？</string>
    <string name="unbind_success">已成功解绑</string>
    <string name="alarm_type">告警类型</string>
    <string name="motion_detection">移动侦测</string>
    <string name="comfirm_open">确定打开</string>
    <string name="comfirm_close">确定关闭</string>
    <string name="dev_installation_way">安装方式</string>
    <string name="top_loading">顶装</string>
    <string name="wall">壁装</string>
    <string name="delete_dev">删除设备</string>
    <string name="dve_name">设备名称</string>
    <string name="light_switch">LED开关</string>
    <string name="light_switch_state_set_err">设置LED开关失败,请重试</string>
     <string name="volume_switch_state_set_err">获取视频播报开关失败！</string>
      <string name="volume_switch_state_off">视频播放的声音已关闭</string>
    <string name="light_switch_state_get_err">获取LED开关状态失败,请重试！</string>
    <string name="finish_uppdate_firmware">固件升级完成</string>
    <string name="current_firmware_version">当前固件版本</string>
    <string name="current_firmware_new_version">已更新到最新版本</string>
    <string name="test_time">下午13:22</string>
    <string name="dialog_ok">确认</string>
    <string name="dialog_cancel">取消</string>
    <string name="begin_time">开始时间</string>
    <string name="end_time">结束时间</string>
    <string name="type_part_first">类</string>
    <string name="type_part_sencond">型</string>
    <string name="no_device_available">没有可用的摄像头</string>
    <string name="more_send">发送反馈</string>
    <string name="more_problem_content_hint">请对问题进行必要的描述</string>
    <string name="more_problem_title_hint">您的联系方式（可选）</string>
	<string name="stateconfig_voice_config">摄像头语音提醒开关</string>
	<string name="stateconfig_device_state">摄像头状态信息</string>
	<string name="stateconfig_device_voidce_ctrl">摄像头音量调节</string>
	<string name="stateconfig_device_light_switch">摄像头LED开关</string>
	<string name="stateconfig_device_wifi_reconfig">摄像头wifi重新配置</string>
	<string name="stateconfig_device_microphone_switch">摄像头麦克风开关</string>
	<string name="stateconfig_device_upgrade">摄像头系统升级</string>
	<string name="stateconfig_device_unbind">摄像头解除绑定</string>
</resources>