<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/white"
    android:orientation="vertical" >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_weight="0"
        android:gravity="center"
        android:text="@string/add_device_search_dialog_title"
        android:textColor="@android:color/black"
        android:textSize="25sp" />

    <FrameLayout style="@style/style_main_page_menu_item_sparate_line" />

    <ListView
        android:id="@+id/add_device_search_ssid_list"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_weight="1"
        android:divider="#00000000" >
    </ListView>

    <FrameLayout style="@style/style_main_page_menu_item_sparate_line" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/btn_previou"
            style="@style/style_add_device_set_wifi_btn"
            android:text="@string/add_device_previous" />

        <Button
            android:id="@+id/btn_research"
            style="@style/style_add_device_set_wifi_btn"
            android:text="@string/add_device_research" />

        <Button
            android:id="@+id/btn_next"
            style="@style/style_add_device_set_wifi_btn"
            android:text="@string/add_device_next" />
    </LinearLayout>

</LinearLayout>