<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@android:color/transparent"
    android:gravity="center_horizontal"
    android:orientation="vertical" >

    <Button
        android:id="@+id/munu_item_modify_psw"
        style="@style/style_main_page_menu_item"
        android:layout_marginTop="8dp"
        android:textColor="@color/color_primary_black"
        android:text="@string/menu_modify_psw" />

    <FrameLayout style="@style/style_main_page_menu_item_sparate_line" />

    <Button
        android:id="@+id/munu_item_switch_user"
        style="@style/style_main_page_menu_item"
        android:textColor="@color/color_primary_black"
        android:text="@string/menu_switch_user" />

    <FrameLayout style="@style/style_main_page_menu_item_sparate_line" />

    <Button
        android:id="@+id/munu_item_exit"
        style="@style/style_main_page_menu_item"
        android:textColor="@color/color_primary_black"
        android:text="@string/menu_exit" />

</LinearLayout>