<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#00000000"
    android:orientation="vertical" >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/color_btn_disable" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#eaedef"
        android:orientation="vertical"
        android:paddingBottom="10dp"
        android:paddingTop="10dp" >

        <!-- 筛选item 1st  类型 -->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="#ffffff"
            android:orientation="horizontal" >

            <TextView
                style="@style/btn_filter_condition_style"
                android:layout_width="50dp"
                android:gravity="center_horizontal|left"
                android:paddingLeft="14dp"
                android:text="@string/type_part_first" />

            <TextView
                style="@style/btn_filter_condition_style"
                android:layout_width="50dp"
                android:gravity="center_horizontal|right"
                android:paddingRight="14dp"
                android:text="@string/type_part_sencond" />

            <TextView style="@style/tv_filter_vertical_divider_style" />

            <TextView
                android:id="@+id/tv_filter_type"
                style="@style/tv_filter_show_data_style"
                android:text="@string/motion_detection" />
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/lv_divider_color" />

        <!-- 筛选item 2nd 开始时间 -->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="#ffffff"
            android:orientation="horizontal" >

            <TextView
                style="@style/btn_filter_condition_style"
                android:text="@string/begin_time" />

            <TextView style="@style/tv_filter_vertical_divider_style" />

            <TextView
                android:id="@+id/tv_filter_begin_time"
                style="@style/tv_filter_show_data_style"
                android:text="@string/test_time" />
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/lv_divider_color" />

        <!-- 筛选item 3rd 结束时间 -->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="#ffffff"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/btn_filter_end_time"
                style="@style/btn_filter_condition_style"
                android:text="@string/end_time" />

            <TextView style="@style/tv_filter_vertical_divider_style" />

            <TextView
                android:id="@+id/tv_filter_end_time"
                style="@style/tv_filter_show_data_style"
                android:text="@string/test_time" />
        </LinearLayout>
    </LinearLayout>

    <!-- 筛选   按钮 -->

    <LinearLayout
        android:id="@+id/lin_filter_btn_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#ffffff"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/btn_filter_cancel"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:background="@drawable/dialog_btn_selector"
            android:text="@string/dialog_cancel" />

        <FrameLayout
            android:layout_width="1px"
            android:layout_height="match_parent"
            android:layout_weight="0"
            android:background="#5f5f5f" >
        </FrameLayout>

        <Button
            android:id="@+id/btn_filter_ok"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:background="@drawable/dialog_btn_selector"
            android:text="@string/dialog_ok" />
    </LinearLayout>

    <TextView
        android:id="@+id/tv_filter_blank"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#00000000" />

</LinearLayout>