<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="100dp"
    android:layout_height="wrap_content"
    android:background="@android:color/transparent"
    android:gravity="center_horizontal"
    android:orientation="vertical" >

    <Button
        android:id="@+id/menu_item_adapter_priority"
        style="@style/style_main_page_menu_item"
        android:gravity="center"
        android:textColor="@color/color_primary_black"
        android:text="@string/menu_adapter" />

    <FrameLayout style="@style/style_main_page_menu_item_sparate_line" />
    
    <Button
        android:id="@+id/menu_item_quality_priority"
        style="@style/style_main_page_menu_item"
        android:gravity="center"
        android:textColor="@color/color_primary_black"
        android:text="@string/menu_quality" />

    <FrameLayout style="@style/style_main_page_menu_item_sparate_line" />

    <Button
        android:id="@+id/menu_item_fluency_priority"
        style="@style/style_main_page_menu_item"
        android:gravity="center"
        android:textColor="@color/color_primary_black"
        android:layout_marginBottom="8dp"
        android:text="@string/menu_fluency" />

</LinearLayout>