<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="270dp"
    android:layout_height="wrap_content"
    android:background="@drawable/fillet_dialog"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp" >

        <TextView
            android:id="@+id/tv_dialog_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:text="@string/hint"
            android:textColor="#000000"
            android:textSize="20sp" />
    </RelativeLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0.7dp"
        android:background="#c0c0c0" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="15dp" >

        <TextView
            android:id="@+id/tv_dialog_message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/present_camera_will_be_unbind"
            android:textColor="#000000"
            android:textSize="20sp" />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0.7dp"
        android:layout_marginTop="5dp"
        android:background="#c0c0c0" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp" >

        <Button
            android:id="@+id/btn_dialog_cancel"
            android:layout_width="90dp"
            android:layout_height="40dp"
            android:layout_alignParentLeft="true"
            android:background="@drawable/btn_device_manage_selector"
            android:gravity="center"
            android:text="@string/cancel"
            android:textColor="#ffffff"
            android:textSize="18sp" />

        <Button
            android:id="@+id/btn_dialog_ok"
            android:layout_width="90dp"
            android:layout_height="40dp"
            android:layout_alignParentRight="true"
            android:background="@drawable/btn_device_manage_selector"
            android:gravity="center"
            android:text="@string/confirm"
            android:textColor="#ffffff"
            android:textSize="18sp" />
    </RelativeLayout>

</LinearLayout>