<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <include
        android:id="@+id/lay_dev_bar"
        layout="@layout/titlebar_common" />

    <TextView
        android:id="@+id/tv_dev_no_device_hint"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/lay_dev_bar"
        android:gravity="center"
        android:text="@string/no_device_available"
        style="@style/style_showmo_text_medium"
        android:visibility="gone" />

    <LinearLayout
        android:id="@+id/lin_dev_btns"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"

        android:orientation="horizontal"
        android:padding="10dp" >

        <Button
            android:id="@+id/btn_dev_delete"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:background="@drawable/btn_device_manage_selector"
            android:clickable="true"
            android:gravity="center"
            android:text="@string/delete"
            android:textColor="#ffffff"
            style="@style/style_showmo_text_medium" />

        <Button
            android:id="@+id/btn_dev_alarmswitch"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginLeft="10dp"
            android:layout_weight="1"
            android:background="@drawable/btn_device_manage_selector"
            android:clickable="true"
            android:gravity="center"
            android:text="@string/alarmswitch"
            android:textColor="#ffffff"
            style="@style/style_showmo_text_medium" />

        <Button
            android:id="@+id/btn_dev_firmware_update"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginLeft="10dp"
            android:layout_weight="1"
            android:background="@drawable/btn_device_manage_selector"
            android:clickable="true"
            android:gravity="center"
            android:text="@string/firmware_update"
            android:textColor="#ffffff"
            style="@style/style_showmo_text_medium" />
    </LinearLayout>

    <ListView
        android:id="@+id/lv_dev_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/lin_dev_btns"
        android:layout_below="@id/lay_dev_bar"
        android:divider="#c0c0c0"
        android:dividerHeight="0.7dp" >
    </ListView>

</RelativeLayout>